<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparentwhite"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/alterGender"
            android:textColor="@color/darkgray"
            android:textSize="19sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <Button
            android:id="@+id/button_popup_choose_gender_female"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/common_dialog_button"
            android:text="@string/female" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="@drawable/shape_line" />

        <Button
            android:id="@+id/button_popup_choose_gender_male"
            style="@style/common_dialog_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/male" />
    </LinearLayout>

    <Button
        android:id="@+id/button_popup_choose_gender_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        android:textSize="25sp" />

</LinearLayout>