<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/acticityNotice" />

    <TextView
        android:id="@+id/tv_dialog_notice"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/acticityNotice"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1.0dp"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_dialog_notice_iKnow"
            style="@style/common_dialog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/iKnow" />

        <TextView
            android:layout_width="1.0dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_line" />

        <Button
            android:id="@+id/button_dialog_notice_check"
            style="@style/common_dialog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/check" />
    </LinearLayout>

</LinearLayout>