<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/green"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_activity_forgetPassword_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:clickable="true"
                android:src="@drawable/common_icon_back_btn_selector" />

            <TextView
                android:id="@+id/tv_activity_forgetPassword_familyCloud"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/title_height"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/familycloud"
                android:textColor="@color/white"
                android:textSize="@dimen/userinfo_top_textsize" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/title_height"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textColor="@color/black"
            android:textSize="@dimen/userinfo_top_textsize" />

        <Button
            android:id="@+id/activity_forgetpassword_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/title_height"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:gravity="right"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/userinfo_top_textsize" />
    </LinearLayout>

    <EditText
        android:id="@+id/activity_forgetpassword_loginName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/login" />

    <TextView
        android:id="@+id/activity_forgetpassword_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:gravity="center" />

</LinearLayout>